diesel_compile_tests/tests/fail/window_function_can_only_be_called_with_window_expression_applied.stderr
error[E0277]: the trait bound `lag<Text, name>: ValidGrouping<()>` is not satisfied
   --> tests/fail/window_function_can_only_be_called_with_window_expression_applied.rs:15:25
    |
 LL |     users::table.select(lag(users::name));
    |                  ------ ^^^^^^^^^^^^^^^^ the trait `ValidGrouping<()>` is not implemented for `lag<Text, name>`
    |                  |
    |                  required by a bound introduced by this call
    |
    = help: the following other types implement trait `ValidGrouping<GroupByClause>`:
              `&T` implements `ValidGrouping<GB>`
              `()` implements `ValidGrouping<GB>`
              `(T, T1)` implements `ValidGrouping<__GroupByClause>`
              `(T, T1, T2)` implements `ValidGrouping<__GroupByClause>`
              `(T, T1, T2, T3)` implements `ValidGrouping<__GroupByClause>`
              `(T, T1, T2, T3, T4)` implements `ValidGrouping<__GroupByClause>`
              `(T, T1, T2, T3, T4, T5)` implements `ValidGrouping<__GroupByClause>`
              `(T, T1, T2, T3, T4, T5, T6)` implements `ValidGrouping<__GroupByClause>`
            and N others
    = note: required for `SelectStatement<FromClause<users::table>>` to implement `SelectDsl<lag<Text, name>>`
    = note: 1 redundant requirement hidden
    = note: required for `users::table` to implement `SelectDsl<lag<Text, name>>`
note: required by a bound in `diesel::QueryDsl::select`
   --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
    |
LL |     fn select<Selection>(self, selection: Selection) -> Select<Self, Selection>
    |        ------ required by a bound in this associated function
...
LL |         Self: methods::SelectDsl<Selection>,
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `QueryDsl::select`
 
    
error[E0277]: the trait bound `diesel::expression::functions::window_functions::rank_utils::rank: ValidGrouping<()>` is not satisfied
   --> tests/fail/window_function_can_only_be_called_with_window_expression_applied.rs:18:25
    |
 LL |     users::table.select(rank());
    |                  ------ ^^^^^^ the trait `ValidGrouping<()>` is not implemented for `diesel::expression::functions::window_functions::rank_utils::rank`
    |                  |
    |                  required by a bound introduced by this call
    |
    = help: the following other types implement trait `ValidGrouping<GroupByClause>`:
              `&T` implements `ValidGrouping<GB>`
              `()` implements `ValidGrouping<GB>`
              `(T, T1)` implements `ValidGrouping<__GroupByClause>`
              `(T, T1, T2)` implements `ValidGrouping<__GroupByClause>`
              `(T, T1, T2, T3)` implements `ValidGrouping<__GroupByClause>`
              `(T, T1, T2, T3, T4)` implements `ValidGrouping<__GroupByClause>`
              `(T, T1, T2, T3, T4, T5)` implements `ValidGrouping<__GroupByClause>`
              `(T, T1, T2, T3, T4, T5, T6)` implements `ValidGrouping<__GroupByClause>`
            and N others
    = note: required for `SelectStatement<FromClause<users::table>>` to implement `SelectDsl<diesel::expression::functions::window_functions::rank_utils::rank>`
    = note: 1 redundant requirement hidden
    = note: required for `users::table` to implement `SelectDsl<diesel::expression::functions::window_functions::rank_utils::rank>`
note: required by a bound in `diesel::QueryDsl::select`
   --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
    |
LL |     fn select<Selection>(self, selection: Selection) -> Select<Self, Selection>
    |        ------ required by a bound in this associated function
...
LL |         Self: methods::SelectDsl<Selection>,
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `QueryDsl::select`
 
    For more information about this error, try `rustc --explain E0277`.
